simulation empty page issue,operation listing action button right side spacing

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -4802,7 +4802,7 @@ body{
     }
   }
   .simulation-page{
-    .empty-table-paecholder{min-height: 383px;}
+    .empty-table-paecholder{min-height: 384px;}
     .sf-btn-footer{
       margin: 0 -27px -12px;
     }
